feat(auth): return access token after email verification
